[package]
name = "ast_custom_mutator"
version = "0.1.0"
edition = "2024"

[dependencies]
# regex-syntax = { version = "0.8", features = ["arbitrary"] }

hex = "0.4"
rand = "0.8"
arbitrary = { version = "1.4.1", features = ["derive"] }
libfuzzer-sys = { version = "0.4.1", features = ["arbitrary-derive"] }
bincode = "1.3"
regex-syntax = { version = "0.8", features = ["arbitrary"] }
serde = { version = "1.0", features = ["derive"] }


[lib]
crate-type = ["cdylib"]



[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3